# hardened-rat-ctf

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
rat-common/: Cargo.toml
rat-common/src/: crypto.rs  lib.rs  obfuscation.rs  protocol.rs
rat-implant/: Cargo.toml
rat-implant/src/: anti_analysis.rs  config.rs  dynapi.rs  keylogger.rs  main.rs  network.rs  persistence.rs  shell.rs
rat-server/: Cargo.toml
rat-server/src/: main.rs  session.rs
scripts/: build.bat
server/: c2_server.py
src/: hardened_rat.c  keylogger.c  keylogger.h
