[package]
name = "rat-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared crypto, protocol, and obfuscation primitives"

[dependencies]
aes = { workspace = true }
ctr = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
