[package]
name = "rat-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C2 server with session management and encrypted comms"

[dependencies]
rat-common = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
